--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "zee",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "TriggerALLtest-headless":"npx cypress run",
+    "TriggerALLtest-headed":"npx cypress run --headed"
   },
   "author": "Zeeshan6679",
   "license": "ISC",
