--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "zeeshanm",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "TriggerALLtest-headless":"npx cypress run"
+    
   },
   "author": "zeeshan",
   "license": "ISC",
