--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "github-enterprise.uri": "https://github.com/0301234/Cypess_Test.git"
+    "github-enterprise.uri": "https://github.com/0301234/Project_for_Jenkin.git"
 }
